Created a css file for about us

--- a/aboutus.html
+++ b/aboutus.html
@@ -1,6 +1,11 @@
+
 <!DOCTYPE html>
-<p>hi</p>
-</html>
+<html>
 <head>
+<link rel="stylesheet" type="text/css" href="aboutus.css">
 <title>About Us</title>
 </head>
+<body>
+<h1> About us</h1>
+</body>
+</html>
