--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="Home.css">
 <title>Home</title>
+<h1>Sell and swap your textbooks</h1>
 </head>
+<body>
+<div id="background-image"></div>
+</body>
+<p>
+<h2>Contact us</h2>
+</p>
+
+
+
+
+
+
 </html>
