--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
 <h1>Sell and swap your textbooks</h1>
 </head>
 <body>
-<div id="background-image"></div>
-</body>
-<p>
+<img src="Logo Aberdeen.png" class="Aberdeen">
 <h2>Contact us</h2>
 <h2>About us</h2>
 <h2>Login or Create an account</h2>
-</p>
+<tr>
+<td>Contact us</td>
+<td>About us</td>
+<td>Login or Create an account</td>
+</tr>
+</body> 
 
 
 
