--- a/aboutus.html
+++ b/aboutus.html
@@ -2,12 +2,26 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="css/bootstrap.css"
 <link rel="stylesheet" type="text/css" href="aboutus.css">
 <title>About Us</title>
+<style>
+  body {
+  	text-align: center;
+    color: white;
+  	font-family: helvetica;
+  	background-image: url("insidelib.jpg");
+  }
+h1 {
+	font-size: 70px;
+}
+ </style>
+}
 </head>
 <body>
-<h1> About us</h1>
+<h1>About Us</h1>
+<ul>
+  <li><a href="#">Home</a></li>
+</ul>
 <div id="background-image"></div>
-
 </body>
-</html>
