--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="Home.css">
 <title>Home</title>
 <h1>Sell and swap your textbooks</h1>
 </head>
 <body>
+<div id="slider">
+<figure>
+<img src="Book2.jpg">
+<img src="Library.jpg">
+</figure>
+
+
+
+
+</div>
+
 <img src="Logo Aberdeen.png" class="Aberdeen">
 <h2>Contact us</h2>
 <h2>About us</h2>
@@ -16,10 +28,6 @@
 <td>Login or Create an account</td>
 </tr>
 </body> 
-
-
-
-
 
 
 </html>
