--- a/index.html
+++ b/index.html
@@ -1,33 +1,26 @@
+
 <!DOCTYPE html>
 <html>
-<head>
+<head> 
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="Home.css">
 <title>Home</title>
-<h1>Sell and swap your textbooks</h1>
+<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 </head>
+<CENTER>
 <body>
-<div id="slider">
-<figure>
-<img src="Book2.jpg">
-<img src="Library.jpg">
-</figure>
-
-
-
-
-</div>
-
-<img src="Logo Aberdeen.png" class="Aberdeen">
-<h2>Contact us</h2>
-<h2>About us</h2>
-<h2>Login or Create an account</h2>
-<tr>
-<td>Contact us</td>
-<td>About us</td>
-<td>Login or Create an account</td>
-</tr>
-</body> 
-
-
-</html>
+<img src="Logo Aberdeen.png" class="Aberdeen" align="left"> <br> &nbsp; <br>
+<hr>
+<h3> HOME | BOOKS | ABOUT US | CONTACT US | LOG IN | CREATE AN ACCOUNT
+</h3>
+<hr>
+<ul>
+<li><a href="#">Home</a></li>
+<li><a href="#">Books</a></li>
+<li><a href="#">About us</a></li>
+<li><a href="#">Contact us </a></li>
+<li><a href="#">Log in</a></li>
+<li><a href="#">Create an account</a></li>
+</ul>
+</CENTER>
+</body>
