Logo and contact ribbon

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <body>
 <img src="Logo Aberdeen.png" class="Aberdeen" align="left"> <br> &nbsp; <br>
 <hr>
-<h3> HOME | BOOKS | ABOUT US | CONTACT US | LOG IN | CREATE AN ACCOUNT
-</h3>
+<h3>
+<li><a href="#"> Home  |</a></li>
+<li><a href="#"> Books  |</a></li>
+<li><a href="#"> About us  |</a></li>
+<li><a href="#"> Contact us  |</a></li>
+<li><a href="#"> Log in   |</a></li>
+<li><a href="#"> Create an account</a></li>
 <hr>
-<ul>
-<li><a href="#">Home</a></li>
-<li><a href="#">Books</a></li>
-<li><a href="#">About us</a></li>
-<li><a href="#">Contact us </a></li>
-<li><a href="#">Log in</a></li>
-<li><a href="#">Create an account</a></li>
+</h3>
 </ul>
+<img src="Aberdeen2.jpg" align="CENTER" width="1300px" height="545px">
 </CENTER>
 </body>
