--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
 <hr>
 </h3>
 </ul>
-<img src="Aberdeen2.jpg" align="CENTER" width="1300px" height="545px">
+<img src="Law.jpg" width="300px" height="200px" padding= "5px"> 
+<img src="Geography.jpg" width="300px" height="200px" padding= "5px"> 
+<img src="Business management.jpg" width="300px" height="200px" padding= "5px"> 
+<img src="English literature.jpg" width="300px" height="200px" padding= "5px"> 
+<img src="Politics.jpg" width="300px" height="200px" padding= "5px"> 
+<img src="Psychology.jpg" width="300px" height="200px" padding= "5px"> 
+<img src="Mathematics.jpg" width="300px" height="200px" padding="5px"> 
+<img src="History.jpg" width="300px" height="200px" padding= "5px"> 
 </CENTER>
 </body>
