--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 
 <!DOCTYPE html>
 <html>
-<head> 
+<header>
+<h1><b>Buy, Sell And Swap Your Textbooks</b></h1>
+<p>FOR Free</p>
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="Home.css">
 <title>Home</title>
 <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
-</head>
+</header>
 <CENTER>
 <body>
 <img src="Logo Aberdeen.png" class="Aberdeen" align="left"> <br> &nbsp; <br>
