--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <!DOCTYPE html>
 <html>
 <header>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script src="jquery.min.js"></script>
 <h1><b>Buy, Sell And Swap Your Textbooks</b></h1>
 <p>FOR Free</p>
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="Home.css">
 <title>Home</title>
 <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+
 </header>
 <CENTER>
 <body>
@@ -32,4 +36,16 @@
 <img src="Mathematics.jpg" width="300px" height="200px" padding="5px"> 
 <img src="History.jpg" width="300px" height="200px" padding= "5px"> 
 </CENTER>
+<div>
+	<address> <strong>Twitter, Inc.</strong><br> 1355 Market Street, Suite 900<br> San Francisco, CA 94103<br> <abbr title="Phone">P:</abbr> (123) 456-7890 </address> <address> <strong>Full Name</strong><br> <a href="mailto:#">first.last@example.com</a> </address>
+
+</div>
+<div>
+	<form> <div class="form-group"> <label for="exampleInputEmail1">Email address</label> <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email"> </div> <div class="form-group"> <label for="exampleInputPassword1">Password</label> <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"> </div> <div class="form-group"> <label for="exampleInputFile">File input</label> <input type="file" id="exampleInputFile"> <p class="help-block">Example block-level help text here.</p> </div> <div class="checkbox"> <label> <input type="checkbox"> Check me out </label> </div> <button type="submit" class="btn btn-default">Submit</button> </form>
+
+
+
+
+	
+</div>
 </body>
