Added Home Button
Added a button for home

--- a/aboutus.html
+++ b/aboutus.html
@@ -2,12 +2,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="css/bootstrap.css"
+<link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="aboutus.css">
 <title>About Us</title>
 <style>
-  body {
-  	text-align: center;
+body{
+
+	text-align: center;
     color: white;
   	font-family: helvetica;
   	background-image: url("insidelib.jpg");
@@ -15,13 +16,28 @@
 h1 {
 	font-size: 70px;
 }
- </style>
+.button {
+	background-color: #4CAF50;
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
 }
+ </style>
 </head>
 <body>
 <h1>About Us</h1>
-<ul>
-  <li><a href="#">Home</a></li>
-</ul>
 <div id="background-image"></div>
+<button>Home</button>
+</div>
+<div class="mySlides">
+  <div class="w3-container w3-red">
+  <h1><b>University of Aberdeen</b></h1>
+  <h1><i>You can sell your items to other students!</i></h1>
+</div>
 </body>
