--- a/aboutus.html
+++ b/aboutus.html
@@ -1,12 +1,13 @@
 
 <!DOCTYPE html>
 <html>
-<head>
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="aboutus.css">
 <title>About Us</title>
 <style>
-body{
+.slideshow {display:none;}
+<style>
+{body
 
 	text-align: center;
     color: white;
@@ -18,7 +19,7 @@ h1 {
 }
 .button {
 	background-color: #4CAF50;
-	border: none;
+	border: black;
 	color: white;
 	padding: 15px 32px;
 	text-align: center;
@@ -28,16 +29,60 @@ h1 {
 	margin: 4px 2px;
 	cursor: pointer;
 }
+
  </style>
-</head>
-<body>
 <h1>About Us</h1>
 <div id="background-image"></div>
 <button>Home</button>
 </div>
-<div class="mySlides">
-  <div class="w3-container w3-red">
-  <h1><b>University of Aberdeen</b></h1>
-  <h1><i>You can sell your items to other students!</i></h1>
+<div class="slideshow-container">
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img src="slideshowlib.jpg" style="width:100%">
+    <div class="text">Caption Text</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img src="slideshow2.jpg" style="width:100%">
+    <div class="text">Caption Two</div>
+  </div>
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span> 
+  <span class="dot" onclick="currentSlide(2)"></span> 
+  <span class="dot" onclick="currentSlide(3)"></span> 
+</div>
+<script>
+var slideIndex = 1;
+showSlides(slideIndex);
+
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  var i;
+  var slides = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1} 
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none"; 
+  }
+  for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block"; 
+  dots[slideIndex-1].className += " active";
+}
+</script>
 </body>
