--- a/aboutus.html
+++ b/aboutus.html
@@ -38,14 +38,14 @@ h1 {
 <div class="slideshow-container">
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
-    <img src="slideshowlib.jpg" style="width:100%">
-    <div class="text">Caption Text</div>
+    <img src="slideshowlibedit.jpg" style="width:100%">
+    <div class="text"></div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 3</div>
-    <img src="slideshow2.jpg" style="width:100%">
-    <div class="text">Caption Two</div>
+    <img src="newkingsslideshow.jpg" style="width:100%">
+    <div class="text"></div>
   </div>
   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
   <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -83,6 +83,20 @@ function showSlides(n) {
   }
   slides[slideIndex-1].style.display = "block"; 
   dots[slideIndex-1].className += " active";
+}
+var slideIndex = 0;
+showSlides();
+
+function showSlides() {
+    var i;
+    var slides = document.getElementsByClassName("mySlides");
+    for (i = 0; i < slides.length; i++) {
+        slides[i].style.display = "none"; 
+    }
+    slideIndex++;
+    if (slideIndex> slides.length) {slideIndex = 1} 
+    slides[slideIndex-1].style.display = "block"; 
+    setTimeout(showSlides, 2000); // Change image every 2 seconds
 }
 </script>
 </body>
