--- a/index.html
+++ b/index.html
@@ -1,51 +1,461 @@
-
 <!DOCTYPE html>
-<html>
-<header>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="jquery.min.js"></script>
-<h1><b>Buy, Sell And Swap Your Textbooks</b></h1>
-<p>FOR Free</p>
-<link rel="stylesheet" href="css/bootstrap.css">
-<link rel="stylesheet" type="text/css" href="Home.css">
-<title>Home</title>
-<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
-
-</header>
-<CENTER>
+<html lang="en">
+<head>
+  <title>University of Aberdeen Startup</title>
+  <meta charset="utf-8">
+</head>
 <body>
-<img src="Logo Aberdeen.png" class="Aberdeen" align="left"> <br> &nbsp; <br>
-<hr>
-<h3>
-<li><a href="#"> Home  |</a></li>
-<li><a href="#"> Books  |</a></li>
-<li><a href="#"> About us  |</a></li>
-<li><a href="#"> Contact us  |</a></li>
-<li><a href="#"> Log in   |</a></li>
-<li><a href="#"> Create an account</a></li>
-<hr>
-</h3>
-</ul>
-<img src="Law.jpg" width="300px" height="200px" padding= "5px"> 
-<img src="Geography.jpg" width="300px" height="200px" padding= "5px"> 
-<img src="Business management.jpg" width="300px" height="200px" padding= "5px"> 
-<img src="English literature.jpg" width="300px" height="200px" padding= "5px"> 
-<img src="Politics.jpg" width="300px" height="200px" padding= "5px"> 
-<img src="Psychology.jpg" width="300px" height="200px" padding= "5px"> 
-<img src="Mathematics.jpg" width="300px" height="200px" padding="5px"> 
-<img src="History.jpg" width="300px" height="200px" padding= "5px"> 
-</CENTER>
+
 <div>
-	<address> <strong>Twitter, Inc.</strong><br> 1355 Market Street, Suite 900<br> San Francisco, CA 94103<br> <abbr title="Phone">P:</abbr> (123) 456-7890 </address> <address> <strong>Full Name</strong><br> <a href="mailto:#">first.last@example.com</a> </address>
-
+  <h3>THE BAND</h3>
+  <p>We love music!</p>
+  <p>We have created a fictional band website. Lorem ipsum..</p>
 </div>
-<div>
-	<form> <div class="form-group"> <label for="exampleInputEmail1">Email address</label> <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email"> </div> <div class="form-group"> <label for="exampleInputPassword1">Password</label> <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"> </div> <div class="form-group"> <label for="exampleInputFile">File input</label> <input type="file" id="exampleInputFile"> <p class="help-block">Example block-level help text here.</p> </div> <div class="checkbox"> <label> <input type="checkbox"> Check me out </label> </div> <button type="submit" class="btn btn-default">Submit</button> </form>
 
-
-
-
-	
-</div>
 </body>
+
+<html lang="en">
+<head>
+  <title>Bootstrap Theme The Band</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body>
+
+<div class="container">
+  <h3>THE BAND</h3>
+  <p>We love music!</p>
+  <p>We have created a fictional band website. Lorem ipsum..</p>
+</div>
+<div class="container text-center">
+  <h3>THE BAND</h3>
+  <p><em>We love music!</em></p>
+  <p>We have created a fictional band website. Lorem ipsum..</p>
+</div>
+
+<div class="container text-center">
+  <h3>THE BAND</h3>
+  <p><em>We love music!</em></p>
+  <p>We have created a fictional band website. Lorem ipsum..</p>
+  <br>
+  <div class="row">
+    <div class="col-sm-4">
+      <p><strong>Name</strong></p><br>
+      <img src="bandmember.jpg" alt="Random Name">
+    </div>
+    <div class="col-sm-4">
+      <p><strong>Name</strong></p><br>
+      <img src="bandmember.jpg" alt="Random Name">
+    </div>
+    <div class="col-sm-4">
+      <p><strong>Name</strong></p><br>
+      <img src="bandmember.jpg" alt="Random Name">
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-sm-4">
+    <p class="text-center"><strong>Name</strong></p><br>
+    <a href="#demo" data-toggle="collapse">
+      <img src="bandmember.jpg" class="img-circle person" alt="Random Name">
+    </a>
+    <div id="demo" class="collapse">
+      <p>Guitarist and Lead Vocalist</p>
+      <p>Loves long walks on the beach</p>
+      <p>Member since 1988</p>
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <p class="text-center"><strong>Name</strong></p><br>
+    <a href="#demo2" data-toggle="collapse">
+      <img src="bandmember.jpg" class="img-circle person" alt="Random Name">
+    </a>
+    <div id="demo2" class="collapse">
+      <p>Drummer</p>
+      <p>Loves drummin'</p>
+      <p>Member since 1988</p>
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <p class="text-center"><strong>Name</strong></p><br>
+    <a href="#demo3" data-toggle="collapse">
+      <img src="bandmember.jpg" class="img-circle person" alt="Random Name">
+    </a>
+    <div id="demo3" class="collapse">
+      <p>Bass player</p>
+      <p>Loves math</p>
+      <p>Member since 2005</p>
+    </div>
+  </div>
+</div>
+
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="ny.jpg" alt="New York">
+      <div class="carousel-caption">
+        <h3>New York</h3>
+        <p>The atmosphere in New York is lorem ipsum.</p>
+      </div> 
+    </div>
+
+    <div class="item">
+      <img src="chicago.jpg" alt="Chicago">
+      <div class="carousel-caption">
+        <h3>Chicago</h3>
+        <p>Thank you, Chicago - A night we won't forget.</p>
+      </div> 
+    </div>
+
+    <div class="item">
+      <img src="la.jpg" alt="Los Angeles">
+      <div class="carousel-caption">
+        <h3>LA</h3>
+        <p>Even though the traffic was a mess, we had the best time.</p>
+      </div> 
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+<style>
+.bg-1 {
+    background: #2d2d30;
+    color: #bdbdbd;
+}
+.bg-1 h3 {color: #fff;}
+.bg-1 p {font-style: italic;}
+</style>
+
+<div class="bg-1">
+  <div class="container">
+    <h3 class="text-center">TOUR DATES</h3>
+    <p class="text-center">Lorem ipsum we'll play you some music.<br> Remember to book your tickets!</p>
+
+    <ul class="list-group">
+      <li class="list-group-item">September Sold Out!</li>
+      <li class="list-group-item">October Sold Out!</li> 
+      <li class="list-group-item">November 3</li> 
+    </ul>
+  </div>
+</div>
+<ul class="list-group">
+  <li class="list-group-item">September <span class="label label-danger">Sold Out!</span></li>
+  <li class="list-group-item">October <span class="label label-danger">Sold Out!</span></li> 
+  <li class="list-group-item">November <span class="badge">3</span></li> 
+</ul>
+<div class="row text-center">
+  <div class="col-sm-4">
+    <div class="thumbnail">
+      <img src="paris.jpg" alt="Paris">
+      <p><strong>Paris</strong></p>
+      <p>Fri. 27 November 2015</p>
+      <button class="btn">Buy Tickets</button>
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="thumbnail">
+      <img src="newyork.jpg" alt="New York">
+      <p><strong>New York</strong></p>
+      <p>Sat. 28 November 2015</p>
+      <button class="btn">Buy Tickets</button>
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="thumbnail">
+      <img src="sanfran.jpg" alt="San Francisco">
+      <p><strong>San Francisco</strong></p>
+      <p>Sun. 29 November 2015</p>
+      <button class="btn">Buy Tickets</button>
+    </div>
+  </div>
+</div>
+
+<style>
+/* Add a dark gray background color to the modal header and center text */
+.modal-header, h4, .close {
+    background-color: #333;
+    color: #fff !important;
+    text-align: center;
+    font-size: 30px;
+}
+
+.modal-header, .modal-body {
+    padding: 40px 50px;
+}
+</style>
+
+<!-- Used to open the Modal -->
+<button class="btn" data-toggle="modal" data-target="#myModal">Buy Tickets</button>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4><span class="glyphicon glyphicon-lock"></span> Tickets</h4>
+      </div>
+      <div class="modal-body">
+        <form role="form">
+          <div class="form-group">
+            <label for="psw"><span class="glyphicon glyphicon-shopping-cart"></span> Tickets, $23 per person</label>
+            <input type="number" class="form-control" id="psw" placeholder="How many?">
+          </div>
+          <div class="form-group">
+            <label for="usrname"><span class="glyphicon glyphicon-user"></span> Send To</label>
+            <input type="text" class="form-control" id="usrname" placeholder="Enter email">
+          </div>
+          <button type="submit" class="btn btn-block">Pay 
+            <span class="glyphicon glyphicon-ok"></span>
+          </button>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal">
+          <span class="glyphicon glyphicon-remove"></span> Cancel
+        </button>
+        <p>Need <a href="#">help?</a></p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <h3 class="text-center">Contact</h3>
+  <p class="text-center"><em>We love our fans!</em></p>
+  <div class="row test">
+    <div class="col-md-4">
+      <p>Fan? Drop a note.</p>
+      <p><span class="glyphicon glyphicon-map-marker"></span>Chicago, US</p>
+      <p><span class="glyphicon glyphicon-phone"></span>Phone: +00 1515151515</p>
+      <p><span class="glyphicon glyphicon-envelope"></span>Email: mail@mail.com</p> 
+    </div>
+    <div class="col-md-8">
+      <div class="row">
+        <div class="col-sm-6 form-group">
+          <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+        </div>
+        <div class="col-sm-6 form-group">
+          <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+        </div>
+      </div>
+      <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea>
+      <div class="row">
+        <div class="col-md-12 form-group">
+          <button class="btn pull-right" type="submit">Send</button>
+        </div>
+      </div> 
+    </div>
+  </div>
+</div>
+
+<style>
+.nav-tabs li a {
+    color: #777;
+}
+</style>
+
+<h3 class="text-center">From The Blog</h3> 
+<ul class="nav nav-tabs">
+  <li class="active"><a data-toggle="tab" href="#home">Mike</a></li>
+  <li><a data-toggle="tab" href="#menu1">Chandler</a></li>
+  <li><a data-toggle="tab" href="#menu2">Peter</a></li>
+</ul>
+
+<div class="tab-content">
+  <div id="home" class="tab-pane fade in active">
+    <h2>Mike Ross, Manager</h2>
+    <p>Man, we've been on the road for some time now. Looking forward to lorem ipsum.</p>
+  </div>
+  <div id="menu1" class="tab-pane fade">
+    <h2>Chandler Bing, Guitarist</h2>
+    <p>Always a pleasure people! Hope you enjoyed it as much as I did. Could I BE.. any more pleased?</p>
+  </div>
+  <div id="menu2" class="tab-pane fade">
+    <h2>Peter Griffin, Bass player</h2>
+    <p>I mean, sometimes I enjoy the show, but other times I enjoy other things.</p>
+  </div>
+</div>
+
+<style>
+#googleMap {
+    width: 100%; /* Span the entire width of the screen */
+    height: 400px; /* Set the height to 400 pixels */
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%); /* Change the color of the map to black and white * /
+}
+</style>
+
+<!-- Add Google Maps -->
+<div id="googleMap"></div>
+<script>
+function myMap() {
+var myCenter = new google.maps.LatLng(41.878114, -87.629798);
+var mapProp = {center:myCenter, zoom:12, scrollwheel:false, draggable:false, mapTypeId:google.maps.MapTypeId.ROADMAP};
+var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+var marker = new google.maps.Marker({position:myCenter});
+marker.setMap(map);
+}
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
+
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span> 
+      </button>
+      <a class="navbar-brand" href="#">Logo</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#home">HOME</a></li>
+        <li><a href="#band">BAND</a></li>
+        <li><a href="#tour">TOUR</a></li>
+        <li><a href="#contact">CONTACT</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
+            <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Merchandise</a></li>
+            <li><a href="#">Extras</a></li>
+            <li><a href="#">Media</a></li> 
+          </ul>
+        </li>
+        <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
+
+<div id="band" class="container">
+<div id="tour" class="container">
+<div id="contact" class="container">
+
+</style>
+
+<footer class="text-center">
+  <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
+    <span class="glyphicon glyphicon-chevron-up"></span>
+  </a><br><br>
+  <p>Bootstrap Theme Made By <a href="https://www.w3schools.com" data-toggle="tooltip" title="Visit w3schools">www.w3schools.com</a></p> 
+</footer>
+
+<script>
+$(document).ready(function(){
+    // Initialize Tooltip
+    $('[data-toggle="tooltip"]').tooltip(); 
+})
+</script>
+
+<script>
+$(document).ready(function(){
+  // Add smooth scrolling to all links in navbar + footer link
+  $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
+
+  // Make sure this.hash has a value before overriding default behavior
+  if (this.hash !== "") {
+
+    // Prevent default anchor click behavior
+    event.preventDefault();
+
+    // Store hash
+    var hash = this.hash;
+
+    // Using jQuery's animate() method to add smooth page scroll
+    // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
+    $('html, body').animate({
+      scrollTop: $(hash).offset().top
+    }, 900, function(){
+
+      // Add hash (#) to URL when done scrolling (default click behavior)
+      window.location.hash = hash;
+      });
+    } // End if 
+  });
+})
+</script>
+
+
+</body>
+
+
+
+
+
+
+
+
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span> 
+      </button>
+      <a class="navbar-brand" href="#">Logo</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#home">HOME</a></li>
+        <li><a href="#band">ABOUT</a></li>
+        <li><a href="#tour">CONTACT</a></li>
+        <li><a href="#contact">SELL AND BUY</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
+            <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Merchandise</a></li>
+            <li><a href="#">Extras</a></li>
+            <li><a href="#">Media</a></li> 
+          </ul>
+        </li>
+        <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
+
+<div id="band" class="container">
+<div id="tour" class="container">
+<div id="contact" class="container">
+Try it Yourself »
+
+
+
+
+</html>
+
