--- a/index.html
+++ b/index.html
@@ -430,15 +430,14 @@ $(document).ready(function(){
         <li><a href="#home">HOME</a></li>
         <li><a href="#band">ABOUT</a></li>
         <li><a href="#tour">CONTACT</a></li>
-        <li><a href="#contact">SELL AND BUY</a></li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
+                <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">SELL ADN BUY
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
-            <li><a href="#">Merchandise</a></li>
-            <li><a href="#">Extras</a></li>
-            <li><a href="#">Media</a></li> 
+            <li><a href="#">Books</a></li>
+            <li><a href="#">Accessories</a></li>
+            <li><a href="#">Notes</a></li> 
           </ul>
         </li>
         <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
