--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <div>
-  <h3>THE BAND</h3>
+  <h3>UNIVERSITY OF ABERDEEN</h3>
   <p>We love music!</p>
   <p>We have created a fictional band website. Lorem ipsum..</p>
 </div>
