--- a/index.html
+++ b/index.html
@@ -41,21 +41,19 @@
   <p><em>We love music!</em></p>
   <p>We have created a fictional band website. Lorem ipsum..</p>
   <br>
+  <!--About us-->
   <div class="row">
     <div class="col-sm-4">
-      <p><strong>Name</strong></p><br>
-      <img src="bandmember.jpg" alt="Random Name">
+      <p><strong>Tanya Bhayani</strong></p><br>
+      <img src="bandmember.jpg" class="img-circle person" alt="Random Name">
     </div>
     <div class="col-sm-4">
-      <p><strong>Name</strong></p><br>
-      <img src="bandmember.jpg" alt="Random Name">
+      <p><strong>Britten Holter</strong></p><br>
+      <img src="Britten.jpg" alt="Britten" class="img-circle person">
+     </div>
     </div>
-    <div class="col-sm-4">
-      <p><strong>Name</strong></p><br>
-      <img src="bandmember.jpg" alt="Random Name">
-    </div>
-  </div>
 </div>
+
 
 <div class="row">
   <div class="col-sm-4">
