--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <body>
 
 <div class="container">
-  <h3>THE BAND</h3>
-  <p>We love music!</p>
+  <h3>UNIVERSITY OF ABERDEEN</h3>
+  <p>Sell your old textbooks and buy new ones!</p>
   <p>We have created a fictional band website. Lorem ipsum..</p>
 </div>
 <div class="container text-center">
@@ -102,7 +102,7 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="ny.jpg" alt="New York">
+      <img src="kingscollegeslideshow.jpg" alt="Kings College">
       <div class="carousel-caption">
         <h3>New York</h3>
         <p>The atmosphere in New York is lorem ipsum.</p>
