--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
   <p><em>We love music!</em></p>
   <p>We have created a fictional band website. Lorem ipsum..</p>
   <br>
+  
   <!--About us-->
   <div class="row">
     <div class="col-sm-4">
       <p><strong>Tanya Bhayani</strong></p><br>
-      <img src="bandmember.jpg" class="img-circle person" alt="Random Name">
+      <img src="TanyaB.jpg" class="img-circle person" alt="Tanya">
     </div>
     <div class="col-sm-4">
       <p><strong>Britten Holter</strong></p><br>
@@ -57,40 +58,29 @@
 
 <div class="row">
   <div class="col-sm-4">
-    <p class="text-center"><strong>Name</strong></p><br>
+    <p class="text-center"><strong>Tanya</strong></p><br>
     <a href="#demo" data-toggle="collapse">
-      <img src="bandmember.jpg" class="img-circle person" alt="Random Name">
+      <img src="TanyaB.jpg" class="img-circle person" alt="Tanya">
     </a>
     <div id="demo" class="collapse">
-      <p>Guitarist and Lead Vocalist</p>
-      <p>Loves long walks on the beach</p>
-      <p>Member since 1988</p>
+      <p>2nd year University of Aberdeen Student</p>
+      <p>Studies Psychology</p>
+      <p>BALLALALA</p>
     </div>
   </div>
   <div class="col-sm-4">
-    <p class="text-center"><strong>Name</strong></p><br>
+    <p class="text-center"><strong>Britten</strong></p><br>
     <a href="#demo2" data-toggle="collapse">
-      <img src="bandmember.jpg" class="img-circle person" alt="Random Name">
+      <img src="Britten.jpg" class="img-circle person" alt="Britten">
     </a>
     <div id="demo2" class="collapse">
-      <p>Drummer</p>
-      <p>Loves drummin'</p>
-      <p>Member since 1988</p>
+      <p>First year student at University of Aberdeen</p>
+      <p>Studying Business Management and Psychology</p>
+      <p>Coding</p>
     </div>
   </div>
-  <div class="col-sm-4">
-    <p class="text-center"><strong>Name</strong></p><br>
-    <a href="#demo3" data-toggle="collapse">
-      <img src="bandmember.jpg" class="img-circle person" alt="Random Name">
-    </a>
-    <div id="demo3" class="collapse">
-      <p>Bass player</p>
-      <p>Loves math</p>
-      <p>Member since 2005</p>
-    </div>
-  </div>
-</div>
-
+ </div>
+<!--ENDS ABOUT US-->
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
