--- a/index.html
+++ b/index.html
@@ -93,15 +93,15 @@
   <div class="carousel-inner" role="listbox">
     <div class="item active">
       <img src="kingscollegeslideshow.jpg" alt="Kings College">
-      <div class="carousel-caption">
-        <h3>New York</h3>
-        <p>The atmosphere in New York is lorem ipsum.</p>
+      <div class="slideshow">
+        <h3>University of Aberdeen</h3>
+        <p>Sell your books.</p>
       </div> 
     </div>
 
     <div class="item">
-      <img src="chicago.jpg" alt="Chicago">
-      <div class="carousel-caption">
+      <img src="newkingsslideshow.jpg" alt="New Kings">
+      <div class="slideshow">
         <h3>Chicago</h3>
         <p>Thank you, Chicago - A night we won't forget.</p>
       </div> 
