--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
   <div class="row">
     <div class="col-sm-4">
       <p><strong>Tanya Bhayani</strong></p><br>
-      <img src="TanyaB.jpg" class="img-circle person" alt="Tanya">
+      <img src="TanyaB2.jpg" class="img-circle person" alt="Tanya">
     </div>
     <div class="col-sm-4">
       <p><strong>Britten Holter</strong></p><br>
-      <img src="Britten.jpg" alt="Britten" class="img-circle person">
+      <img src="Britten2.jpg" alt="Britten" class="img-circle person">
      </div>
     </div>
 </div>
@@ -60,7 +60,7 @@
   <div class="col-sm-4">
     <p class="text-center"><strong>Tanya</strong></p><br>
     <a href="#demo" data-toggle="collapse">
-      <img src="TanyaB.jpg" class="img-circle person" alt="Tanya">
+      <img src="TanyaB2.jpg" class="img-circle person" alt="Tanya">
     </a>
     <div id="demo" class="collapse">
       <p>2nd year University of Aberdeen Student</p>
@@ -71,7 +71,7 @@
   <div class="col-sm-4">
     <p class="text-center"><strong>Britten</strong></p><br>
     <a href="#demo2" data-toggle="collapse">
-      <img src="Britten.jpg" class="img-circle person" alt="Britten">
+      <img src="Britten2.jpg" class="img-circle person" alt="Britten">
     </a>
     <div id="demo2" class="collapse">
       <p>First year student at University of Aberdeen</p>
