Changed our headings

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
     <div id="demo" class="collapse">
       <p>2nd year University of Aberdeen Student</p>
-      <p>Studies Psychology</p>
+      <p>Studying MA Psychology</p>
       <p>BALLALALA</p>
     </div>
     <div class="col-sm-4">
@@ -108,7 +108,7 @@
       </a>
       <div id="demo2" class="collapse">
       <p>First year student at University of Aberdeen</p>
-      <p>Studying Business Management and Psychology</p>
+      <p>Studying MA Business Management and Psychology</p>
       <p>Coding</p>
     </div>
      </div>
