Added a new slideshow pic

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     </div>
 
     <div class="item">
-      <img src="la.jpg" alt="Los Angeles">
+      <img src="libraryslideshow.jpg" alt="Sir Duncan Rice">
       <div class="carousel-caption">
-        <h3>LA</h3>
-        <p>Even though the traffic was a mess, we had the best time.</p>
+        <h3>The Sir Duncan Rice Library</h3>
+        <p>Buy new books.</p>
       </div> 
     </div>
   </div>
@@ -98,7 +98,6 @@
     <div id="demo" class="collapse">
       <p>2nd year University of Aberdeen Student</p>
       <p>Studying MA Psychology</p>
-      <p>BALLALALA</p>
     </div>
     <div class="col-sm-4">
     <p class="text-center"><strong>Britten</strong></p><br>
@@ -109,13 +108,10 @@
       <div id="demo2" class="collapse">
       <p>First year student at University of Aberdeen</p>
       <p>Studying MA Business Management and Psychology</p>
-      <p>Coding</p>
     </div>
      </div>
      </div>
      <!--ENDS ABOUT US-->
-
-
 
 <style>
 .bg-1 {
