More slideshow changes

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div class="item">
       <img src="newkingsslideshow.jpg" alt="New Kings">
       <div class="slideshow">
-        <h3>Chicago</h3>
-        <p>Thank you, Chicago - A night we won't forget.</p>
+        <h3>University of Aberdeen</h3>
+        <p>Negotiate with peers.</p>
       </div> 
     </div>
 
