--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
   <div class="carousel-inner" role="listbox">
     <div class="item active">
       <img src="kingscollegeslideshow.jpg" alt="Kings College">
-      <div class="slideshow">
+      <div class="carousel-caption">
         <h3>University of Aberdeen</h3>
         <p>Sell your books.</p>
       </div> 
     </div>
 
     <div class="item">
-      <img src="newkingsslideshow.jpg" alt="New Kings">
-      <div class="slideshow">
+      <img src="book.jpg" alt="Heart Pages">
+      <div class="carousel-caption">
         <h3>University of Aberdeen</h3>
         <p>Negotiate with peers.</p>
       </div> 
