changes in code

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
 </head>
 <body>
+<!--Carousel starts-->
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
@@ -114,17 +115,6 @@
      </div>
      </div>
      <!--ENDS ABOUT US-->
-
-
-
-<style>
-.bg-1 {
-    background: #2d2d30;
-    color: #bdbdbd;
-}
-.bg-1 h3 {color: #fff;}
-.bg-1 p {font-style: italic;}
-</style>
 
 <div class="bg-1">
   <div class="container">
@@ -299,54 +289,9 @@ var marker = new google.maps.Marker({position:myCenter});
 marker.setMap(map);
 }
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
+<script src=https://www.google.co.uk/maps/place/University+of+Aberdeen/@57.16476,-2.1037144,17z/data=!3m1!4b1!4m5!3m4!1s0x48840e0400000000:0xfa5ca7f4f50108e!8m2!3d57.16476!4d-2.1015257></script>
+<!--Google maps ends-->
 
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span> 
-      </button>
-      <a class="navbar-brand" href="#">Logo</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#home">HOME</a></li>
-        <li><a href="#band">BAND</a></li>
-        <li><a href="#tour">TOUR</a></li>
-        <li><a href="#contact">CONTACT</a></li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
-            <span class="caret"></span>
-          </a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Merchandise</a></li>
-            <li><a href="#">Extras</a></li>
-            <li><a href="#">Media</a></li> 
-          </ul>
-        </li>
-        <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
-
-<div id="band" class="container">
-<div id="tour" class="container">
-<div id="contact" class="container">
-
-</style>
-
-<footer class="text-center">
-  <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
-    <span class="glyphicon glyphicon-chevron-up"></span>
-  </a><br><br>
-  <p>Bootstrap Theme Made By <a href="https://www.w3schools.com" data-toggle="tooltip" title="Visit w3schools">www.w3schools.com</a></p> 
-</footer>
 
 <script>
 $(document).ready(function(){
@@ -382,17 +327,9 @@ $(document).ready(function(){
   });
 })
 </script>
-
-
 </body>
 
-
-
-
-
-
-
-
+<!--Navigation bar-->
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -409,7 +346,7 @@ $(document).ready(function(){
         <li><a href="#band">ABOUT</a></li>
         <li><a href="#tour">CONTACT</a></li>
                 <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">SELL ADN BUY
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">SELL AND BUY
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
@@ -426,13 +363,11 @@ $(document).ready(function(){
 
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
 
-<div id="band" class="container">
-<div id="tour" class="container">
-<div id="contact" class="container">
-Try it Yourself »
+<div id="About" class="container">
+<div id="Contact" class="container">
+<div id="Sell and buy" class="container">
 
-
-
+<!--Navigation bar ends-->
 
 </html>
 
