--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
   <div class="carousel-inner" role="listbox">
     <div class="item active">
       <img src="kingscollegeslideshow.jpg" alt="Kings College">
-      <div class="slideshow">
+      <div class="carousel-caption">
         <h3>University of Aberdeen</h3>
         <p>Sell your books.</p>
       </div> 
     </div>
 
     <div class="item">
-      <img src="newkingsslideshow.jpg" alt="New Kings">
-      <div class="slideshow">
-        <h3>Chicago</h3>
-        <p>Thank you, Chicago - A night we won't forget.</p>
+      <img src="libraryslideshow.jpg" alt="Sir Duncan Rice">
+      <div class="carousel-caption">
+        <h3>The Sir Duncan Rice Library</h3>
+        <p>Buy new books.</p>
       </div> 
     </div>
 
     <div class="item">
-      <img src="la.jpg" alt="Los Angeles">
+      <img src="book.jpg" alt="Heart Book">
       <div class="carousel-caption">
-        <h3>LA</h3>
-        <p>Even though the traffic was a mess, we had the best time.</p>
+        <h3>Negotiate with peers.</h3>
+        <p>Decide on a price.</p>
       </div> 
     </div>
   </div>
