--- a/index.html
+++ b/index.html
@@ -51,28 +51,11 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-<div class="container">
-  <h3>UNIVERSITY OF ABERDEEN</h3>
-  <p>Sell your old textbooks and buy new ones!</p>
-  <p>We have created a fictional band website. Lorem ipsum..</p>
-</div>
 <div class="container text-center">
-  <h3>THE BAND</h3>
+  <h3>ABOUT</h3>
   <p><em>We love music!</em></p>
   <p>We have created a fictional band website. Lorem ipsum..</p>
 </div>
-
-<div class="container text-center">
-  <h3>THE BAND</h3>
-  <p><em>We love music!</em></p>
-  <p>We have created a fictional band website. Lorem ipsum..</p>
-  <br>
-<div>
-  <h3>UNIVERSITY OF ABERDEEN</h3>
-  <p>We love music!</p>
-  <p>We have created a fictional band website. Lorem ipsum..</p>
-</div>
-
 </body>
 
 <html lang="en">
