--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <img src="Britten2.jpg" alt="Britten" class="img-circle person">
       </a>
       <div id="demo2" class="collapse">
-      <p>First year student at University of Aberdeen</p>
+      <p>1st year student at University of Aberdeen</p>
       <p>Studying Business Management and Psychology</p>
       <p>Coding</p>
     </div>
