--- a/index.html
+++ b/index.html
@@ -51,13 +51,7 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-<div class="container text-center">
-  <h3>ABOUT</h3>
-  <p><em>We love music!</em></p>
-  <p>We have created a fictional band website. Lorem ipsum..</p>
-</div>
 </body>
-
 <html lang="en">
 <head>
   <title>Bootstrap Theme The Band</title>
@@ -71,11 +65,17 @@
 
   
   <!--About us-->
+  <div class="container text-center">
+  <h3>ABOUT</h3>
+  <p><em>We love music!</em></p>
+  <p>We have created a fictional band website. Lorem ipsum..</p>
+</div>
+
   <div class="row">
     <div class="col-sm-4">
-      <p class="text-center"><strong>Tanya</strong></p><br>
-      <p><strong>Tanya Bhayani</strong></p><br>
+      <p class="text-center">
       <a href="#demo" data-toggle="collapse">
+      <p><strong>Tanya Bhayani</strong></p><br>      
       <img src="TanyaB2.jpg" class="img-circle person" alt="Tanya">
       </a>
     </div>
@@ -85,7 +85,7 @@
       <p>BALLALALA</p>
     </div>
     <div class="col-sm-4">
-    <p class="text-center"><strong>Britten</strong></p><br>
+    <p class="text-center">
     <a href="#demo2" data-toggle="collapse">
       <p><strong>Britten Holter</strong></p><br>
       <img src="Britten2.jpg" alt="Britten" class="img-circle person">
