Changed Contact Form

--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
   <p class="text-center"><em>We love our fans!</em></p>
   <div class="row test">
     <div class="col-md-4">
-      <p>Fan? Drop a note.</p>
-      <p><span class="glyphicon glyphicon-map-marker"></span>Chicago, US</p>
+      <p>Problems? Contact us.</p>
+      <p><span class="glyphicon glyphicon-map-marker"></span>Aberdeen, UK</p>
       <p><span class="glyphicon glyphicon-phone"></span>Phone: +00 1515151515</p>
-      <p><span class="glyphicon glyphicon-envelope"></span>Email: mail@mail.com</p> 
+      <p><span class="glyphicon glyphicon-envelope"></span>Email: t.bhayani.15@aberdeen.ac.uk</p> 
     </div>
     <div class="col-md-8">
       <div class="row">
