position of images

--- a/index.html
+++ b/index.html
@@ -69,14 +69,13 @@
   <h3>ABOUT</h3>
   <p><em>We love music!</em></p>
   <p>We have created a fictional band website. Lorem ipsum..</p>
-</div>
-
+  <br>
   <div class="row">
     <div class="col-sm-4">
       <p class="text-center">
       <a href="#demo" data-toggle="collapse">
       <p><strong>Tanya Bhayani</strong></p><br>      
-      <img src="TanyaB2.jpg" class="img-circle person" alt="Tanya">
+      <img src="TanyaB2.jpg" class="img-circle person" alt="Tanya"
       </a>
     </div>
     <div id="demo" class="collapse">
@@ -84,13 +83,26 @@
       <p>Studies Psychology</p>
       <p>BALLALALA</p>
     </div>
+
     <div class="col-sm-4">
     <p class="text-center">
     <a href="#demo2" data-toggle="collapse">
-      <p><strong>Britten Holter</strong></p><br>
+      <br>
+      <img src="Blank.jpg" alt="Blank" class="img-circle person">
+      </a>
+      </div>
+      <div id="demo2" class="collapse">
+      </div>
+     
+     
+    <div class="col-sm-4">
+    <p class="text-center">
+    <a href="#demo3" data-toggle="collapse">
+      <p><strong>Britten Holter</strong></p>
+      <br>
       <img src="Britten2.jpg" alt="Britten" class="img-circle person">
       </a>
-      <div id="demo2" class="collapse">
+      <div id="demo3" class="collapse">
       <p>1st year student at University of Aberdeen</p>
       <p>Studying Business Management and Psychology</p>
       <p>Coding</p>
