--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ footer a:hover {
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>University of Aberdeen, Britten and Tanya <a href="www.abdn.ac.uk" data-toggle="tooltip" title="Visit w3schools">www.w3schools.com</a></p> 
+  <p>University of Aberdeen, Britten and Tanya <a href="www.abdn.ac.uk" data-toggle="tooltip"
 </footer>
 
 <script>
