--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
 <div class="row text-center">
   <div class="col-sm-4">
     <div class="thumbnail">
-      <img src="paris.jpg" alt="Paris">
-      <p><strong>Paris</strong></p>
-      <p>Fri. 27 November 2015</p>
-      <button class="btn">Buy Tickets</button>
+      <img src="smallbooks.jpg" alt="Books">
+      <p><strong>Books</strong></p>
+      <p>Browse through books</p>
+      <button class="btn">Browse Books</button>
     </div>
   </div>
   <div class="col-sm-4">
@@ -327,7 +327,7 @@ $(document).ready(function(){
   </div>
 </nav>
 
-<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" data-offset="50">
 
 <div id="About" class="container">
 <div id="Contact" class="container">
