--- a/index.html
+++ b/index.html
@@ -133,24 +133,24 @@
     <div class="thumbnail">
       <img src="smallbooks.jpg" alt="Books">
       <p><strong>Books</strong></p>
-      <p>Browse through books</p>
+      <p>Browse</p>
       <button class="btn">Browse Books</button>
     </div>
   </div>
   <div class="col-sm-4">
     <div class="thumbnail">
-      <img src="newyork.jpg" alt="New York">
-      <p><strong>New York</strong></p>
-      <p>Sat. 28 November 2015</p>
-      <button class="btn">Buy Tickets</button>
+      <img src="stationary.jpg" alt="Stationary">
+      <p><strong>Stationary</strong></p>
+      <p>Browse</p>
+      <button class="btn">Browse Stationary</button>
     </div>
   </div>
   <div class="col-sm-4">
     <div class="thumbnail">
-      <img src="sanfran.jpg" alt="San Francisco">
-      <p><strong>San Francisco</strong></p>
-      <p>Sun. 29 November 2015</p>
-      <button class="btn">Buy Tickets</button>
+      <img src="lamp.jpg" alt="Lamp">
+      <p><strong>Household Items</strong></p>
+      <p>Browse</p>
+      <button class="btn">Browse Household Items</button>
     </div>
   </div>
 </div>
