--- a/index.html
+++ b/index.html
@@ -219,25 +219,21 @@
 }
 </style>
 
-<h3 class="text-center">From The Blog</h3> 
+<h3 class="text-center">From the students</h3> 
 <ul class="nav nav-tabs">
-  <li class="active"><a data-toggle="tab" href="#home">Mike</a></li>
-  <li><a data-toggle="tab" href="#menu1">Chandler</a></li>
-  <li><a data-toggle="tab" href="#menu2">Peter</a></li>
+  <li class="active"><a data-toggle="tab" href="#home">Britten</a></li>
+  <li><a data-toggle="tab" href="#menu1">Tanya</a></li>
 </ul>
 
 <div class="tab-content">
   <div id="home" class="tab-pane fade in active">
-    <h2>Mike Ross, Manager</h2>
-    <p>Man, we've been on the road for some time now. Looking forward to lorem ipsum.</p>
+    <h2>Britten Holter, Student</h2>
+    <p>This website makes it easier to sell my books instead of putting it on a random page on Facebook!</p>
   </div>
   <div id="menu1" class="tab-pane fade">
-    <h2>Chandler Bing, Guitarist</h2>
-    <p>Always a pleasure people! Hope you enjoyed it as much as I did. Could I BE.. any more pleased?</p>
+    <h2>Tanya Bhayani, Student</h2>
+    <p>I like the search section so I can see if any books I want are actually on here!</p>
   </div>
-  <div id="menu2" class="tab-pane fade">
-    <h2>Peter Griffin, Bass player</h2>
-    <p>I mean, sometimes I enjoy the show, but other times I enjoy other things.</p>
   </div>
 </div>
 
