--- a/index.html
+++ b/index.html
@@ -157,12 +157,12 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4><span class="glyphicon glyphicon-lock"></span> Tickets</h4>
+        <h4><span class="glyphicon glyphicon-lock"></span> Books</h4>
       </div>
       <div class="modal-body">
         <form role="form">
           <div class="form-group">
-            <label for="psw"><span class="glyphicon glyphicon-shopping-cart"></span> Tickets, $23 per person</label>
+            <label for="psw"><span class="glyphicon glyphicon-shopping-cart"></span> Books, £10 per book</label>
             <input type="number" class="form-control" id="psw" placeholder="How many?">
           </div>
           <div class="form-group">
@@ -184,12 +184,13 @@
   </div>
 </div>
 
+<!--Contact us-->
 <div class="container">
   <h3 class="text-center">Contact</h3>
   <p class="text-center"><em>We love our fans!</em></p>
   <div class="row test">
     <div class="col-md-4">
-      <p>Problems? Contact us.</p>
+      <p>Contact us.</p>
       <p><span class="glyphicon glyphicon-map-marker"></span>Aberdeen, UK</p>
       <p><span class="glyphicon glyphicon-phone"></span>Phone: +00 1515151515</p>
       <p><span class="glyphicon glyphicon-envelope"></span>Email: t.bhayani.15@aberdeen.ac.uk</p> 
@@ -212,11 +213,9 @@
     </div>
   </div>
 </div>
+<!--Ends-->
 
-<style>
-.nav-tabs li a {
-    color: #777;
-}
+
 </style>
 
 <h3 class="text-center">From the students</h3> 
