--- a/index.html
+++ b/index.html
@@ -79,11 +79,9 @@
       </a>
     </div>
     <div id="demo" class="collapse">
-      <p>2nd year University of Aberdeen Student</p>
-      <p>Studies Psychology</p>
-      <p>BALLALALA</p>
+      <p>2nd year student at the University of Aberdeen Student</p>
+      <p>Studying MA Psychology</p>
     </div>
-
     <div class="col-sm-4">
     <p class="text-center">
     <a href="#demo2" data-toggle="collapse">
@@ -93,8 +91,6 @@
       </div>
       <div id="demo2" class="collapse">
       </div>
-     
-     
     <div class="col-sm-4">
     <p class="text-center">
     <a href="#demo3" data-toggle="collapse">
@@ -105,7 +101,6 @@
       <div id="demo3" class="collapse">
       <p>1st year student at University of Aberdeen</p>
       <p>Studying Business Management and Psychology</p>
-      <p>Coding</p>
     </div>
      </div>
      </div>
