--- a/index.html
+++ b/index.html
@@ -71,17 +71,21 @@
   <p>We have created a fictional band website. Lorem ipsum..</p>
   <br>
   <div class="row">
+
     <div class="col-sm-4">
-      <p class="text-center">
-      <a href="#demo" data-toggle="collapse">
-      <p><strong>Tanya Bhayani</strong></p><br>      
-      <img src="TanyaB2.jpg" class="img-circle person" alt="Tanya"
-      </a>
+     <p class="text-center">
+     <a href="#demo" data-toggle="collapse">
+     <p><strong>Tanya Bhayani</strong></p>
+     <br>      
+     <img src="TanyaB2.jpg" class="img-circle person" alt="Tanya">
+     </a>
     </div>
     <div id="demo" class="collapse">
-      <p>2nd year student at the University of Aberdeen Student</p>
-      <p>Studying MA Psychology</p>
-    </div>
+    <p>2nd year student at the University of Aberdeen Student</p>
+    <p>Studying MA Psychology</p>
+   </div>
+
+
     <div class="col-sm-4">
     <p class="text-center">
     <a href="#demo2" data-toggle="collapse">
@@ -91,6 +95,8 @@
       </div>
       <div id="demo2" class="collapse">
       </div>
+     
+     
     <div class="col-sm-4">
     <p class="text-center">
     <a href="#demo3" data-toggle="collapse">
@@ -100,7 +106,7 @@
       </a>
       <div id="demo3" class="collapse">
       <p>1st year student at University of Aberdeen</p>
-      <p>Studying Business Management and Psychology</p>
+      <p>Studying MA Business Management and Psychology</p>
     </div>
      </div>
      </div>
