--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
      </div>
      <!--ENDS ABOUT US-->
 
+<!--Buying part-->
   <div class="row text-center">
   <div class="col-sm-4">
     <div class="thumbnail">
@@ -135,20 +136,6 @@
     </div>
   </div>
 </div>
-
-<style>
-/* Add a dark gray background color to the modal header and center text */
-.modal-header, h4, .close {
-    background-color: #333;
-    color: #fff !important;
-    text-align: center;
-    font-size: 30px;
-}
-
-.modal-header, .modal-body {
-    padding: 40px 50px;
-}
-</style>
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" role="dialog">
@@ -216,9 +203,7 @@
 </div>
 <!--Ends-->
 
-
-</style>
-
+<!--Feedback-->
 <h3 class="text-center">From the students</h3> 
 <ul class="nav nav-tabs">
   <li class="active"><a data-toggle="tab" href="#home">Britten</a></li>
@@ -237,6 +222,7 @@
   </div>
 </div>
 
+<!--Maps-->
 <style>
 #googleMap {
     width: 100%; /* Span the entire width of the screen */
@@ -309,24 +295,6 @@ $(document).ready(function(){
 
 <!--Navigation bar ends-->
 
-</html>
-<style>
-/* Add a dark background color to the footer */
-footer {
-    background-color: #2d2d30;
-    color: #f5f5f5;
-    padding: 32px;
-}
-
-footer a {
-    color: #f5f5f5;
-}
-
-footer a:hover {
-    color: #777;
-    text-decoration: none;
-}
-</style>
 
 <footer class="text-center">
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
