linked with css

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="stylesheet" type="text/css" href="Home.css">
 <html lang="en">
 <head>
   <title>University of Aberdeen Startup</title>
