images with text DONE

--- a/index.html
+++ b/index.html
@@ -71,47 +71,43 @@
   <p><em>We love music!</em></p>
   <p>We have created a fictional band website. Lorem ipsum..</p>
   <br>
-  <div class="row">
-
-    <div class="col-sm-4">
-     <p class="text-center">
-     <a href="#demo" data-toggle="collapse">
-     <p><strong>Tanya Bhayani</strong></p>
-     <br>      
-     <img src="TanyaB2.jpg" class="img-circle person" alt="Tanya">
-     </a>
-    </div>
+ 
+ <div class="row">
+  <div class="col-sm-4">
+    <p class="text-center"><strong>Tanya Bhayani</strong></p><br>
+    <a href="#demo" data-toggle="collapse">
+      <img src="TanyaB3.jpg" class="img-circle person" alt="Tanya">
+    </a>
     <div id="demo" class="collapse">
-    <p>2nd year student at the University of Aberdeen Student</p>
-    <p>Studying MA Psychology</p>
-   </div>
-
-
-    <div class="col-sm-4">
-    <p class="text-center">
-    <a href="#demo2" data-toggle="collapse">
-      <br>
-      <img src="Blank.jpg" alt="Blank" class="img-circle person">
-      </a>
-      </div>
-      <div id="demo2" class="collapse">
-      </div>
-     
-     
-    <div class="col-sm-4">
-    <p class="text-center">
-    <a href="#demo3" data-toggle="collapse">
-      <p><strong>Britten Holter</strong></p>
-      <br>
-      <img src="Britten2.jpg" alt="Britten" class="img-circle person">
-      </a>
-      <div id="demo3" class="collapse">
-      <p>1st year student at University of Aberdeen</p>
-      <p>Studying MA Business Management and Psychology</p>
+      <p>Guitarist and Lead Vocalist</p>
+      <p>Loves long walks on the beach</p>
+      <p>Member since 1988</p>
     </div>
-     </div>
-     </div>
-     <!--ENDS ABOUT US-->
+  </div>
+  <div class="col-sm-4">
+    <p class="text-center"><strong>UoA Library</strong></p><br>
+    <a href="#demo2" data-toggle="collapse">
+      <img src="LibraryR.jpg" class="img-circle person" alt="Library">
+    </a>
+    <div id="demo2" class="collapse">
+      <p>Drummer</p>
+      <p>Loves drummin'</p>
+      <p>Member since 1988</p>
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <p class="text-center"><strong>Name</strong></p><br>
+    <a href="#demo3" data-toggle="collapse">
+      <img src="Britten3.jpg" class="img-circle person" alt="Britten">
+    </a>
+    <div id="demo3" class="collapse">
+      <p>Bass player</p>
+      <p>Loves math</p>
+      <p>Member since 2005</p>
+    </div>
+  </div>
+</div>
+         <!--ENDS ABOUT US-->
 
 <!--Buying part-->
   <div class="row text-center">
