nav bar made the colours change

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </div>
   </div>
   <div class="col-sm-4">
-    <p class="text-center"><strong>Name</strong></p><br>
+    <p class="text-center"><strong>Britten Holter</strong></p><br>
     <a href="#demo3" data-toggle="collapse">
       <img src="Britten3.jpg" class="img-circle person" alt="Britten">
     </a>
