sell and buy heading

--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
          <!--ENDS ABOUT US-->
 
 <!--Buying part-->
+<h3 class="text-center">Sell And Buy</h3>
+<p><em>Click on </em></p>
+  <p>I don't know</p>
+  <br>
   <div class="row text-center">
   <div class="col-sm-4">
     <div class="thumbnail">
@@ -287,22 +291,22 @@ $(document).ready(function(){
         <span class="icon-bar"></span>
         <span class="icon-bar"></span> 
       </button>
-      <a class="navbar-brand" href="#"></a>
-      <img src="Logo2.jpg">
+      <a class="navbar-brand" href="#">Logo</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#home">HOME</a></li>
-        <li><a href="#about">ABOUT</a></li>
+        <li><a href="#band">ABOUT</a></li>
+        <li><a href="#tour">SELL AND BUY</a></li>
         <li><a href="#contact">CONTACT</a></li>
-                <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">SELL AND BUY
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
             <li><a href="#">Books</a></li>
-            <li><a href="#">Accessories</a></li>
-            <li><a href="#">Notes</a></li> 
+            <li><a href="#">Notes</a></li>
+            <li><a href="#">Accessories</a></li> 
           </ul>
         </li>
         <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
@@ -310,12 +314,14 @@ $(document).ready(function(){
     </div>
   </div>
 </nav>
+<!--Scrollspy-->
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
+
+<div id="about" class="container">
+<div id="sell and buy" class="container">
+<div id="contact" class="container">
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" data-offset="50">
-
-<div id="About" class="container">
-<div id="Contact" class="container">
-<div id="Sell and buy" class="container">
 
 <!--Navigation bar ends-->
 
