--- a/index.html
+++ b/index.html
@@ -115,9 +115,12 @@
          <!--ENDS ABOUT US-->
 
 <!--Buying part-->
-<h3 class="text-center">Sell And Buy</h3>
-<p><em>Click on </em></p>
-  <p>I don't know</p>
+
+<div class="bg-1">
+  <div class="container">
+    <h3 class="text-center">SELL AND BUY</h3>
+    <p class="text-center">Lorem ipsum we'll play you some music.<br> Remember to book your tickets!</p>
+
   <br>
   <div class="row text-center">
   <div class="col-sm-4">
@@ -142,6 +145,7 @@
     </div>
   </div>
 </div>
+
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" role="dialog">
