--- a/index.html
+++ b/index.html
@@ -329,6 +329,25 @@ $(document).ready(function(){
 
 <!--Navigation bar ends-->
 
+<style>
+/* Add a dark background color to the footer */
+footer {
+    background-color: #2d2d30;
+    color: #f5f5f5;
+    padding: 40px;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+footer a {
+    color: #f5f5f5;
+}
+
+footer a:hover {
+    color: #777;
+    text-decoration: none;
+}
+</style>
 
 <footer class="text-center">
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
