--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
       <img src="Britten3.jpg" class="img-circle person" alt="Britten">
     </a>
     <div id="demo3" class="collapse">
-      <p>Bass player</p>
-      <p>Loves math</p>
-      <p>Member since 2005</p>
+      <p>Hello! My name is Britten Holter and I am an undergraduate student at University of Aberdeen.</p>
+      <p>Previously I studied in London at Southbank International School where I finished the International Baccalaureate Program.</p>
+      <p>Coding is something that I discovered recently and it has turned out to be very helpful in creating this website as well as pushing me to go out of my comfort zone.</p>
     </div>
   </div>
 </div>
@@ -232,7 +232,7 @@
   </div>
 </div>
 
-	
+<!--Google maps-->	
 <div id="googleMap" style="width:100%;height:400px;"></div>
 
 <script>
@@ -246,7 +246,7 @@ var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
 </script>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
-
+<!--Ends-->
 
 
 <!--making scrolling smoother-->
